<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_menu_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_header" />

    <TextView
        android:id="@+id/details_title_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_menu_details"
        android:gravity="center_horizontal"
        android:text="@string/titleHeader"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_title_header"


        />

    <TextView
        android:id="@+id/details_description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_title"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/descriptionHeader"

        />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_description_header"


        />

    <TextView
        android:id="@+id/details_url_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_description"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/urlHeader" />

    <TextView
        android:id="@+id/url_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_url_header" />

    <ImageView
        android:id="@+id/details_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_textview"

        />


    <Button
        android:id="@+id/go_to_url_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/articleBrowserViewText" />

    <Button
        android:id="@+id/add_to_favourites_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/go_to_url_button"
        android:text="@string/add"

        />
</RelativeLayout>